Fix exception handling