@@ -13,7 +13,6 @@ dependencies {
 
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'
 
     implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'win'
     implementation group: 'org.openjfx', name: 'javafx-base', version: javaFxVersion, classifier: 'mac'
@@ -58,4 +57,8 @@ mainClassName = 'elon.Launcher'
 
 run{
     standardInput = System.in
+//    jvmArgs = [
+//        '--module-path', classpath.asPath,
+//        '--add-modules', 'javafx.controls.javafx.fxml'
+//    ]
 }
